--- a/main.html
+++ b/main.html
@@ -5,8 +5,15 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
+	<div>
+		<h1 id="f1">Flowers photos</h1>
+		<p></p>
+	</div>
+	<div>
+		<h1 id="f2">Roses picture</h1>
+		<p></p>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
