--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 		<p></p>
 	</div>
 	<div>
-		<h1 id="f2">Roses picture</h1>
+		<h1 id="f2">Roses pictures</h1>
 		<p></p>
 	</div>
 	<!-- the entire body must be written by student -->
